--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "anchu/ftp",
-    "description": "A simple Laravel 4/5 ftp service provider",
-    "keywords": ["ftp", "laravel", "l4", "l5", "service provider"],
+    "description": "A simple Laravel 7 ftp service provider",
+    "keywords": ["ftp", "laravel", "l5", "l6","l7", "service provider"],
     "license": "MIT",
     "authors": [{
         "name": "Harish Anchu",
@@ -9,7 +9,7 @@
     }],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "5.x"
+        "illuminate/support": "^5.0|^6.0|^7.0"
     },
     "autoload": {
         "psr-0": {
